B-F Backup Sandbox 30.4.12/src/objects/Key_Task_Template__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>PARX - Jochen Schrader P00002 for reporting of key task with outlet visits</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>qualitative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>quantitative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Infowelders</description>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Key Task Templates</relationshipLabel>
        <relationshipName>Key_Task_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outlet_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Class</label>
        <referenceTo>Outlet_Class__c</referenceTo>
        <relationshipLabel>Key Task Templates</relationshipLabel>
        <relationshipName>Key_Task_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Key Task Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Outlet_Class__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DEU_All_Templates_for_this_Market</fullName>
        <columns>NAME</columns>
        <columns>Outlet_Class__c</columns>
        <columns>Channel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Market__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Germany</value>
        </filters>
        <label>DEU - All Templates for this Market</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JPN_All_Templates_for_this_Market</fullName>
        <columns>NAME</columns>
        <columns>Outlet_Class__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <label>JPN - All Templates for this Market</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Twn_Key_task</fullName>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Outlet_Class__c</columns>
        <columns>Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Taiwan</value>
        </filters>
        <label>Twn_Key task</label>
        <language>en_US</language>
        <sharedTo>
            <group>TWN-all users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Key Task Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Task Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>